--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,17 @@
 Thumbs.db
 
 /vendor/
+
+#Lock files
+composer.lock
+symfony.lock
+
+###> symfony/framework-bundle ###
+/.env.local
+/.env.local.php
+/.env.*.local
+/config/secrets/prod/prod.decrypt.private.php
+/public/bundles/
+/var/
+/vendor/
+###< symfony/framework-bundle ###
