--- a/composer.json
+++ b/composer.json
@@ -15,10 +15,10 @@
         "php": ">=7.2.5",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "symfony/console": "^5.3",
+        "symfony/dotenv": "^5.3",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "^5.3",
-        "symfony/dotenv": "^5.3",
-        "symfony/console": "^5.3",
         "symfony/runtime": "^5.3",
         "symfony/yaml": "^5.3"
     },
@@ -64,5 +64,11 @@
             "allow-contrib": false,
             "require": "5.3.*"
         }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9.5",
+        "symfony/browser-kit": "5.3.*",
+        "symfony/css-selector": "5.3.*",
+        "symfony/phpunit-bridge": "^5.3"
     }
 }
