--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "^5.3",
         "symfony/runtime": "^5.3",
+        "symfony/security-bundle": "5.3.*",
         "symfony/yaml": "^5.3"
     },
     "config": {
@@ -69,6 +70,7 @@
         "phpunit/phpunit": "^9.5",
         "symfony/browser-kit": "5.3.*",
         "symfony/css-selector": "5.3.*",
+        "symfony/maker-bundle": "^1.33",
         "symfony/phpunit-bridge": "^5.3"
     }
 }
