allow login with lexic jwt

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -23,10 +23,10 @@ security:
 #            provider: app_user_provider
 
         login:
-            pattern: ^/api/login
+            pattern: ^/api/users/login
             stateless: true
             json_login:
-                check_path: /api/login_check
+                check_path: /api/users/login
                 success_handler: lexik_jwt_authentication.handler.authentication_success
                 failure_handler: lexik_jwt_authentication.handler.authentication_failure
 
