--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -45,4 +45,5 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+         - { path: ^/api/users, roles:  PUBLIC_ACCESS }
+         - { path: ^/api, roles: ROLE_USER }
