--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -46,4 +46,5 @@ security:
     access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
          - { path: ^/api/users, roles:  PUBLIC_ACCESS }
+         - { path: ^/api/articles, roles:  PUBLIC_ACCESS }
          - { path: ^/api, roles: ROLE_USER }
